# 2dDrawnPlayground

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
app/include/: Contracts.hpp  Literals.hpp  Normalization.hpp  PPM.hpp  Palette.hpp  Pixel.hpp
app/modules/: ColorUtilities.ixx  Contracts.ixx  Generators.ixx  Image.Ppm.ixx  Interpolation.ixx  Literals.ixx  Operators.ixx  Palette.ixx  Pixel.ixx  Shapes.ixx
app/src/: main.cpp
tests/: CMakeLists.txt  TestColorCast.cpp
